# ai-data-generator

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
ddl/: company_employee_schema.ddl
src/: __main__.py  container.py  data_generation.py
src/db/: db_service.py
src/guards/input/: valid_sql_guard.py
src/service/: ai_service.py  gemini_service.py  generate_options.py  model_response.py
