[project]
name = "ai-data-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Kamil",email = "kkukielka@griddynamics.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai (>=1.46.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
